# EngineerTraining

./: .gitignore  README.md  external.md  pyproject.toml
.claude/: settings.json
.claude/agents/: redcode-quaritycheck-streamlit.md
Exercises_In_Programming_Style/: README.md
Exercises_In_Programming_Style/01-good-old-times/: tf-o1.py
FastAPITraining/: README.md  auth.py  db.py  main.py  pyproject.toml
FastAPITraining/api/: annotated.py  depends.py  res_model.py  status_code.py
FastAPITraining/docs/: DI.md  FastAPI-test.md  FastAPIでの複雑JSONとヘッダー処理.md  api-name.md  auth.md  di-auth.md  doc.md  health-check.md  json-models.md  log-openapi.md  obj-access.md  patch.md  response-model.md  swagger-ui.md
FastAPITraining/models/: items.py
HTMLCSSJS/: sidebar-upload-search.html  tailwind-sample.md  tailwindplay.html  textbox.html  toolbar.html
JavaForPythonLearner/: ElseIf.java  Fraction.java  Hello.java  Hello.py  Learn.java  TempConv.java  fraction.py
LangGraph/: README.md  main.py  settings.py
NextjsTraining/: BFF-tanstack.md  Nextjs-Guidance.md  README.md
NuxtPJ/: app.vue  nuxt.md  構造.md
PydanticTraining/: 1_ageValidator.py  2_before.py  3_serialization.py  4_nonPrimitive.py  5_typeConvert.py  README.md  settings.py
Python/: class.md  note.md
TanstackQuery/: package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
chatapp/: chatapp.py
hypermodernPython/: note.md
idiomTraining/: argolithem.md  cate.py  categorize_by_cosine.py  charIsdigit.py  sentence_split.py  sentence_split_curly.py
json-api/: curl.sh  streamlit.html  trim.py
json_object/: request.json
keyphrase/: extraction.md
presidio/: main.py  pyproject.toml
presidio/kampo-research-v2/: README.md  README_normalizer.md  code-document.md  handler.py  output.csv  pyproject.toml  sample_usage.py
presidio/kampo-research-v2/recognizers/: japanese_standard.py
typescropt_oauth/: login.tsx
実践TypeScript/: TSgakushu.ts  package-lock.json  package.json  学習メモ.md  開発方針.md
(+170 files in other folders)
