[project]
name="settingstraining"
version="0.0.1"
description="pydantic settingsのトレーニング"
readme="README.md"
requires-python=">=3.11"
dependencies = [
    "fastapi>=0.135.1",
    "langchain>=1.2.12",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.2",
    "pydantic-settings>=2.13.1",
    "reflex>=0.8.27",
]
