[project]
name = "kampo-research-v2"
version = "0.1.0"
description = "Presidio Japanese PII detection with GiNZA"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=1.0,<2.0",
    "spacy>=3.7,<3.8",
    "ginza>=5.2.0",
    "ja-ginza>=5.2.0",
    "presidio-analyzer>=2.2.362",
    "presidio-anonymizer>=2.2.362",
    "pip>=26.1.1",
]
